--- a/signup.html
+++ b/signup.html
@@ -47,16 +47,16 @@
             </div>
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" pattern="[^ @]*@[^ @]*"
+                <input type="email" class="form-control" id="inputEmail4" required
                     placeholder="Enter your email">
             </div>
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword4">
+                <input type="password" class="form-control" id="inputPassword4" required>
             </div>
             <div class="col-12">
                 <label for="inputAddress" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
             </div>
             <div class="col-12">
                 <label for="inputAddress2" class="form-label">Address 2</label>
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-6">
                 <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input type="text" class="form-control" id="inputCity" required>
             </div>
             <div class="col-md-4">
                 <label for="inputState" class="form-label">State</label>
@@ -127,7 +127,7 @@
             </div>
             <div class="col-md-2">
                 <label for="inputZip" class="form-label">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
+                <input type="text" class="form-control" id="inputZip" required>
             </div>
             <div class="col-12">
                 <div class="form-check">
