--- a/signup.html
+++ b/signup.html
@@ -75,21 +75,21 @@
             localStorage.setItem("state", state);
 
             var zip = document.getElementById("inputZip").value;
-            localStorage.setItem("state", zip);
+            localStorage.setItem("zip", zip);
 
             var billingaddress = document.getElementById("billingAddress").value;
-            localStorage.setItem("billingaddress", billing);
+            localStorage.setItem("billingaddress", billingaddress);
 
             var billingaddress2 = document.getElementById("billingAddress2").value;
             localStorage.setItem("billingaddress2", billingaddress2);
 
-            var city = document.getElementById("billingcity").value;
-            localStorage.setItem("billingcity", city);
+            var billingcity = document.getElementById("billingCity").value;
+            localStorage.setItem("billingcity", billingcity);
 
-            var state = document.getElementById("billingState").value;
-            localStorage.setItem("billingstate", state);
+            var billingstate = document.getElementById("billingState").value;
+            localStorage.setItem("billingstate", billingstate);
 
-            var billingzip = document.getElementById("billlingZip").value;
+            var billingzip = document.getElementById("billingZip").value;
             localStorage.setItem("billingzip", billingzip);
 
             var phone = document.getElementById("inputPhone").value;
@@ -122,7 +122,7 @@
             </div>
             <div class="col-md-12">
                 <label for="inputPrimaryContact" class="form-label">Administrator Contact</label>
-                <input type="text" class="form-control" id="inputAdminåContact" required>
+                <input type="text" class="form-control" id="inputAdminContact" required>
             </div>
             <div class="col-md-12">
                 <label for="inputEmail4" class="form-label">Email</label>
