--- a/signup.html
+++ b/signup.html
@@ -296,7 +296,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
-                        Agree to the terms
+                        <a href="terms.html" target="_blank">Agree to the terms</a>
                     </label>
                 </div>
             </div>
